# Bluetooth-refs_heads_android17-release

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .style.yapf  Android.bp  BluetoothGTestTemplate.xml  BluetoothRustTestTemplate.xml  CPPLINT.cfg  Cargo.toml  OWNERS  OWNERS_automotive  OWNERS_channel_sounding  OWNERS_chromeos  OWNERS_leaudio  OWNERS_metrics  OWNERS_testing  PREUPLOAD.cfg  README.md  TEST_MAPPING  build.py  checkstyle_suppressions.xml  pyproject.toml  rustfmt.toml
flags/: 24q3_exported_api_flags.aconfig  25q2_exported_api_flags.aconfig  25q4_exported_api_flags.aconfig  Android.bp  BUILD.gn  OWNERS  a2dp.aconfig  active_device_manager.aconfig  adapter.aconfig  avrcp.aconfig  avrcp_controller.aconfig  bta_dm.aconfig  btif_dm.aconfig  btm_ble.aconfig  btm_iso.aconfig  classic_connections.aconfig  connectivity.aconfig  framework.aconfig  gap.aconfig  gatt.aconfig  hal.aconfig  hap.aconfig  hci.aconfig  hearing_aid.aconfig  hfp.aconfig  hfpclient.aconfig  hid.aconfig  l2cap.aconfig  le_advertising.aconfig  le_scanning.aconfig  leaudio.aconfig  mapclient.aconfig  media_audio.aconfig  metric.aconfig  native.aconfig  opp.aconfig  pairing.aconfig  pbap.aconfig  ranging.aconfig  rfcomm.aconfig  (+9 more)
flags/exported_api/: Android.bp
flags/internal/: Android.bp  system_server.aconfig
sysprop/: Android.bp  BUILD.gn  OWNERS  a2dp.sysprop  avrcp.sysprop  ble.sysprop  bta.sysprop  core.sysprop  device_id.sysprop  gap.sysprop  hardware.sysprop  hci.sysprop  hfp.sysprop  le_audio.sysprop  tmap.sysprop
sysprop/exported_include/: android_bluetooth_sysprop.h
system/gd/: Android.bp  BUILD.gn  benchmark.cc  fuzz_test.cc
system/gd/common/: audit_log.cc  audit_log.h  bidi_queue.h  bidi_queue_unittest.cc  bind.h  blocking_queue.h  blocking_queue_unittest.cc  byte_array.h  byte_array_test.cc  circular_buffer.h  circular_buffer_test.cc  contextual_callback.h  i_postable_context.h  list_map.h  list_map_test.cc  lru_cache.h  lru_cache_test.cc  multi_priority_queue.h  multi_priority_queue_test.cc  numbers.h  numbers_test.cc  postable_context.h  stop_watch.cc  stop_watch.h  sync_map_count.h  sync_map_count_test.cc  utils.cc  utils.h  watchdog.cc  watchdog.h  watchdog_test.cc
system/gd/crypto_toolbox/: Android.bp  aes_cmac.cc  crypto_toolbox.cc  crypto_toolbox.h  crypto_toolbox_test.cc
system/gd/fuzz/: helpers.cc  helpers.h
system/gd/hal/: endpoint.h  gatt_hal.h  gatt_hal_impl.h  gatt_hal_impl_android.cc  gatt_hal_impl_android.h  gatt_hal_impl_host.h  hci_backend.h  hci_backend_aidl.cc  hci_backend_hidl.cc  hci_hal.h  hci_hal_fake.cc  hci_hal_fake.h  hci_hal_host_rootcanal_config.h  hci_hal_impl.h  hci_hal_impl_android.cc  hci_hal_impl_android.h  hci_hal_impl_android_test.cc  hci_hal_impl_host.cc  hci_hal_impl_host.h  hci_hal_impl_host_rootcanal.cc  hci_hal_impl_host_rootcanal_test.cc  link_clocker.cc  link_clocker.h  ranging_hal.h  ranging_hal_impl.h  ranging_hal_impl_android.cc  ranging_hal_impl_android.h  ranging_hal_impl_host.h  ranging_hal_mock.h  serialize_packet.h  snoop_logger.cc  snoop_logger.h  snoop_logger_file.cc  snoop_logger_file.h  snoop_logger_socket.cc  snoop_logger_socket.h  snoop_logger_socket_test.cc  snoop_logger_socket_thread.cc  snoop_logger_socket_thread.h  snoop_logger_socket_thread_test.cc  (+9 more)
system/gd/hci/: acl_builder_test.cc  acl_connection_interface.h  address_unittest.cc  address_with_type.h  address_with_type_test.cc  class_of_device_unittest.cc  classic_acl_data_consumer.h  command_interface.h  controller.h  controller_impl.cc  controller_impl.h  controller_impl_test.cc  controller_mock.h  distance_measurement_interface.h  distance_measurement_manager.h  distance_measurement_manager_impl.cc  distance_measurement_manager_impl.h  distance_measurement_manager_impl_test.cc  distance_measurement_manager_mock.h  enum_helper.h  event_checkers.h  hci_data_router.h  hci_interface.h  hci_layer.cc  hci_layer.h  hci_layer_fake.cc  hci_layer_fake.h  hci_layer_mock.h  hci_layer_test.cc  hci_layer_unittest.cc  hci_metrics_logging.cc  hci_metrics_logging.h  hci_packets_fuzz_test.cc  hci_packets_test.cc  inquiry_interface.h  le_acl_connection_interface.h  le_acl_data_consumer.h  le_address_manager.cc  le_address_manager.h  le_address_manager_test.cc  (+31 more)
system/gd/lpp/: lpp_offload_interface.h  lpp_offload_interface_mock.h  lpp_offload_manager.cc  lpp_offload_manager.h
system/gd/metrics/: metrics.h
system/gd/os/: alarm.h  alarm_benchmark.cc  asserting_timed_guard.h  boottime_clock.h  files.h  handler.cc  handler.h  handler_benchmark.cc  handler_unittest.cc  handler_unittest_rt.cc  mock_rand.h  parameter_provider.h  parameter_provider_test.cc  queue.h  queue_benchmark.cc  rand.cc  rand.h  reactor.h  repeating_alarm.h  system_properties.h  system_properties_common.cc  system_properties_common_test.cc  thread.h  thread_benchmark.cc  timed_mutex.h  utils.h
system/gd/packet/: Android.bp  BUILD.gn  base_packet_builder.h  base_struct.h  bit_inserter.cc  bit_inserter.h  bit_inserter_unittest.cc  byte_inserter.cc  byte_inserter.h  custom_field_fixed_size_interface.h  custom_type_checker.h  endian_inserter.h  fragmenting_inserter.cc  fragmenting_inserter.h  fragmenting_inserter_unittest.cc  iterator.cc  iterator.h  packet_builder.h  packet_builder_unittest.cc  packet_struct.h  packet_view.cc  packet_view.h  packet_view_unittest.cc  raw_builder.cc  raw_builder.h  raw_builder_unittest.cc  view.cc  view.h
system/gd/proto/: Android.bp
system/gd/storage/: config_cache.cc  config_cache.h  config_cache_helper.cc  config_cache_helper.h  config_cache_helper_test.cc  config_cache_test.cc  config_keys.h  device.cc  device.h  device_test.cc  le_device.h  le_device_test.cc  legacy_config_file.cc  legacy_config_file.h  legacy_config_file_test.cc  storage_module.cc  storage_module.h  storage_module_test.cc
system/gd/sysprops/: sysprops_module.cc  sysprops_module.h  sysprops_module_test.cc
system/main/shim/: BUILD.gn  acl.cc  acl.h  acl_api.cc  acl_api.h  acl_interface.cc  acl_interface.h  ble_scanner_interface_impl.h  btm_api.cc  btm_api.h  (+14 more)
system/metrics/: Android.bp  BUILD.gn
(+3400 files in other folders)
