#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[workspace]
resolver = "1"

default-members = [
  "floss/rust/topshim",
  "floss/rust/linux/mgmt",
  "floss/rust/linux/service",
  "floss/rust/linux/stack",
  "floss/rust/linux/client",
  "floss/rust/linux/utils",
]

members = [
  "floss/rust/topshim",
  "floss/rust/linux/mgmt",
  "floss/rust/linux/service",
  "floss/rust/linux/stack",
  "floss/rust/linux/client",
  "floss/rust/linux/utils",
  "floss/hcidoc",
]

exclude = [
  "system/audio/codecs/lhdcv5",
]

[patch.crates-io]
# When building out of ChromiumOS, we do not actually use featured.
# Stub it to avoid downloading the platform2 repository.
# See also: https://github.com/rust-lang/cargo/issues/4544
featured = { path = "floss/rust/linux/repositories/featured_stub" } # ignored by ebuild
