import("//bt/flags/aconfig.gni")

aconfig("bluetooth_flags_c_lib") {
  # LINT.IfChange
  sources = [
    "a2dp.aconfig",
    "active_device_manager.aconfig",
    "adapter.aconfig",
    "avrcp.aconfig",
    "avrcp_controller.aconfig",
    "bta_dm.aconfig",
    "btif_dm.aconfig",
    "btm_ble.aconfig",
    "btm_iso.aconfig",
    "classic_connections.aconfig",
    "connectivity.aconfig",
    "framework.aconfig",
    "gap.aconfig",
    "gatt.aconfig",
    "hal.aconfig",
    "hap.aconfig",
    "hci.aconfig",
    "hearing_aid.aconfig",
    "hfp.aconfig",
    "hfpclient.aconfig",
    "hid.aconfig",
    "l2cap.aconfig",
    "le_advertising.aconfig",
    "le_scanning.aconfig",
    "leaudio.aconfig",
    "mapclient.aconfig",
    "media_audio.aconfig",
    "metric.aconfig",
    "native.aconfig",
    "opp.aconfig",
    "pairing.aconfig",
    "pbap.aconfig",
    "ranging.aconfig",
    "rfcomm.aconfig",
    "rnr.aconfig",
    "sco.aconfig",
    "sdp.aconfig",
    "security.aconfig",
    "service_discovery.aconfig",
    "sockets.aconfig",
    "system_service.aconfig",
    "tbs.aconfig",
    "threading.aconfig",
    "vcp.aconfig",
  ]

  # LINT.ThenChange(/flags/Android.bp)
  package = "com.android.bluetooth.flags"
  deps = [ "//bt/floss/libflags:libflags" ]
}
