import("//bt/sysprop/sysprop.gni")

sysprop("libcom.android.sysprop.bluetooth") {
  sources = [
    "a2dp.sysprop",
    "avrcp.sysprop",
    "ble.sysprop",
    "bta.sysprop",
    "core.sysprop",
    "device_id.sysprop",
    "gap.sysprop",
    "hardware.sysprop",
    "hci.sysprop",
    "hfp.sysprop",
    "le_audio.sysprop",
    "tmap.sysprop",
  ]
  deps = [ "//bt/floss/android-base:android-base" ]
}
