[package]
name = "btstack"
version = "0.1.0"
edition = "2021"

[dependencies]
bt_topshim = { path = "../../topshim" }
bt_utils = { path = "../utils" }

btif_macros = { path = "btif_macros" }

dbus = "0.9.2"
env_logger = "0.8.3"
itertools = "0.10.5"
log = "0.4.14"
log-panics = "2.1.0"
nix = { version = "0.29", features = ["socket", "uio"] }
num-derive = "0.4.2"
num-traits = "0.2"
rand = { version = "0.8.3", features = ["small_rng"] }
serde_json = "1.0"
syslog = "6"
tokio = { version = "1", features = ['bytes', 'fs', 'io-util', 'libc', 'macros', 'mio', 'net', 'rt', 'rt-multi-thread', 'sync', 'time', 'tokio-macros'] }

[lib]
path = "src/lib.rs"

[build-dependencies]
pkg-config = "0.3.19"
